--- a/index.html
+++ b/index.html
@@ -3748,6 +3748,20 @@
 </tr>
 
 <tr>
+<td>Air Ace Picture Library</td>
+<td>1960</td>
+<td>IPC</td>
+<td><a href="IPC/IPC.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Air Ace Picture Holiday Special</td>
+<td>1976</td>
+<td>IPC</td>
+<td><a href="IPC/IPC.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Air Fighters</td>
 <td>1941</td>
 <td>Hillman</td>
@@ -5485,6 +5499,13 @@
 <td>1944</td>
 <td>Fox Comics</td>
 <td><a href="FoxPublications/FoxPublications.html">Details</a></td>
+</tr>
+
+<tr>
+<td>All-Action Monthly</td>
+<td>1987</td>
+<td>IPC</td>
+<td><a href="IPC/IPC.html">Details</a></td>
 </tr>
 
 <tr>
@@ -9699,10 +9720,17 @@
 </tr>
 
 <tr>
-<td>Attack!</td>
-<td>1958</td>
-<td>Charlton</td>
-<td><a href="Charlton/Charlton.html">Details</a></td>
+<td>Attack Picture Library</td>
+<td>1982</td>
+<td>IPC</td>
+<td><a href="IPC/IPC.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Attack Picture Holiday Special</td>
+<td>1969</td>
+<td>IPC</td>
+<td><a href="IPC/IPC.html">Details</a></td>
 </tr>
 
 <tr>
@@ -9717,6 +9745,20 @@
 <td>1994</td>
 <td>FantaCo</td>
 <td><a href="FantaCoEnterprises/FantaCoEnterprises.html">Details</a></td> 
+</tr>
+
+<tr>
+<td>Attack!</td>
+<td>1958</td>
+<td>Charlton</td>
+<td><a href="Charlton/Charlton.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Attack! War Story Pictures</td>
+<td>1982</td>
+<td>IPC</td>
+<td><a href="IPC/IPC.html">Details</a></td>
 </tr>
 
 <tr>
@@ -11672,6 +11714,13 @@
 </tr>
 
 <tr>
+<td>Batman Annual</td>
+<td>1982</td>
+<td>IPC</td>
+<td><a href="IPC/IPC.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Batman Beyond</td>
 <td>2019</td>
 <td>Publisher</td>
@@ -11931,6 +11980,27 @@
 </tr>
 
 <tr>
+<td>Battle</td>
+<td>1981</td>
+<td>IPC</td>
+<td><a href="IPC/IPC.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Battle Action</td>
+<td>1977</td>
+<td>IPC</td>
+<td><a href="IPC/IPC.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Battle Action Force</td>
+<td>1983</td>
+<td>IPC</td>
+<td><a href="IPC/IPC.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Battle Amongst The Stars</td>
 <td>2010</td>
 <td>Tidalwave</td>
@@ -11942,6 +12012,13 @@
 <td>1992</td>
 <td>Viz</td>
 <td><a href="Viz/Viz.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Battle Annual</td>
+<td>1988</td>
+<td>IPC</td>
+<td><a href="IPC/IPC.html">Details</a></td>
 </tr>
 
 <tr>
@@ -12029,6 +12106,41 @@
 </tr>
 
 <tr>
+<td>Battle Picture Library</td>
+<td>1961</td>
+<td>IPC</td>
+<td><a href="IPC/IPC.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Battle Picture Monthly</td>
+<td>1980</td>
+<td>IPC</td>
+<td><a href="IPC/IPC.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Battle Picture Weekly</td>
+<td>1975</td>
+<td>IPC</td>
+<td><a href="IPC/IPC.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Battle Picture Weekly And Valiant</td>
+<td>1976</td>
+<td>IPC</td>
+<td><a href="IPC/IPC.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Battle Picture Weekly Annual</td>
+<td>1976</td>
+<td>IPC</td>
+<td><a href="IPC/IPC.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Battle Pope</td>
 <td>2005</td>
 <td>Image</td>
@@ -12061,6 +12173,13 @@
 <td>1952</td>
 <td>Fawcett</td>
 <td><a href="Fawcett/Fawcett.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Battle Storm Force</td>
+<td>1987</td>
+<td>IPC</td>
+<td><a href="IPC/IPC.html">Details</a></td>
 </tr>
 
 <tr>
@@ -13160,7 +13279,7 @@
 </tr>
 
 <tr>
-<td>Best CArtoons From Punch</td>
+<td>Best Cartoons From Punch</td>
 <td>1952</td>
 <td>Simon And Schuster</td>
 <td><a href="SimonAndSchuster/SimonAndSchuster.html">Details</td>
@@ -13178,6 +13297,13 @@
 <td>1960</td>
 <td>Charlton</td>
 <td><a href="Charlton/Charlton.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Best Of 2000 AD Monthly</td>
+<td>1985</td>
+<td>IPC</td>
+<td><a href="IPC/IPC.html">Details</a></td>
 </tr>
 
 <tr>
@@ -13248,6 +13374,13 @@
 <td>2017</td>
 <td>Titan</td>
 <td><a href="TitanBooks/TitanBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Best Of Krazy</td>
+<td>1978</td>
+<td>IPC</td>
+<td><a href="IPC/IPC.html">Details</a></td>
 </tr>
 
 <tr>
@@ -23288,6 +23421,13 @@
 <td>1992</td>
 <td>Tundra</td>
 <td><a href="Tundra/Tundra.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Cobalt Blue</td>
+<td>1978</td>
+<td>Power Comics</td>
+<td><a href="PowerComics/PowerComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -66846,6 +66986,13 @@
 </tr>
 
 <tr>
+<td>Narrative Comics</td>
+<td>1944</td>
+<td>Publisher</td>
+<td><a href="NarrativeComics/NarrativeComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Narrative Corpse</td>
 <td>1995</td>
 <td>Raw Books</td>
@@ -73550,6 +73697,27 @@
 <td>1994</td>
 <td>Malibu</td>
 <td><a href="MalibuComics/MalibuComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Power Comics</td>
+<td>1944</td>
+<td>Narrative</td>
+<td><a href="NarrativeComics/NarrativeComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Power Comics</td>
+<td>1977</td>
+<td>Power Comics</td>
+<td><a href="PowerComics/PowerComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Power Comics Company</td>
+<td>1977</td>
+<td>Publisher</td>
+<td><a href="PowerComics/PowerComics.html">Details</a></td>
 </tr>
 
 <tr>
