--- a/index.html
+++ b/index.html
@@ -12337,6 +12337,13 @@
 </tr>
 
 <tr>
+<td>Bazooka Joe</td>
+<td>1952</td>
+<td>Topps</td>
+<td><a href="BazookaJoe/BazookaJoe.html">Details</a></td>
+</tr>
+
+<tr>
 <td>BBC</td>
 <td>1922</td>
 <td>Publisher</td>
@@ -16502,6 +16509,13 @@
 <td>1916</td>
 <td>Creator</td>
 <td><a href="BobOksner/BobOksner.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Bob Peak</td>
+<td>1927</td>
+<td>Creator</td>
+<td><a href="BobPeak/BobPeak.html">Details</a></td>
 </tr>
 
 <tr>
