--- a/AcclaimComics/AcclaimComics.html
+++ b/AcclaimComics/AcclaimComics.html
@@ -201,9 +201,9 @@ Titles
 </p><p>
 <li><a href="Acclaim1.jpg">Acclaim Adventure Zone</a> 1997
 <li><a href="Acclaim2.jpg">Adventures of the Super Mario Bros.</a> 1990
-<li><a href="Acclaim3.jpg">Adventures of TheO - The Great Ballistic Challenge</a> 1993
-<li><a href="Acclaim4.jpg">Antiquities War on the World of Magic the Gathering</a> 1995
-<li><a href="Acclaim5.jpg">Arabian Nights on the World of Magic: The Gathering</a> 1995
+<li><a href="Acclaim3.jpg">Adventures of TheO</a> 1993
+<li><a href="Acclaim4.jpg">Antiquities War on the World of Magic The Gathering</a> 1995
+<li><a href="Acclaim5.jpg">Arabian Nights on the World of Magic The Gathering</a> 1995
 <li><a href="Acclaim6.jpg">Archer & Armstrong</a> 1992
 <li><a href="Acclaim7.jpg">Armed and Dangerous</a> 1996
 <li><a href="Acclaim8.jpg">Armed and Dangerous Hell's Slaughterhouse</a> 1996
@@ -219,8 +219,8 @@ Titles
 <li><a href="Acclaim18.jpg">Best of the Super Mario Bros.</a> 1990
 <li><a href="Acclaim19.jpg">Bloodshot</a> 1993
 <li><a href="Acclaim20.jpg">Bloodshot</a> 1997
-<li><a href="Acclaim21.jpg">Bloodshot Last Stand</a> 1996
-<li><a href="Acclaim22.jpg">Bloodshot Yearbook</a> 1994
+<li><a href="Acclaim21.jpg">Bloodshot: Last Stand</a> 1996
+<li><a href="Acclaim22.jpg">Bloodshot: Yearbook</a> 1994
 <li><a href="Acclaim23.jpg">Captain Johner & the Aliens</a> 1995
 <li><a href="Acclaim24.jpg">Captain N: The Game Master</a> 1990
 <li><a href="Acclaim25.jpg">Chaos Effect</a> 1994
@@ -232,18 +232,18 @@ Titles
 <li><a href="Acclaim31.jpg">Dakkon Blackblade on the World of Magic: The Gathering</a> 1996
 <li><a href="Acclaim32.jpg">Darque Passages</a> 1994
 <li><a href="Acclaim33.jpg">Darque Passages</a> 1998
-<li><a href="Acclaim34.jpg">Deadside</a>1999
+<li><a href="Acclaim34.jpg">Deadside</a> 1999
 <li><a href="Acclaim172.jpg">Deathmate</a> 1993
 <li><a href="Acclaim35.jpg">Destroyer</a> 1995
 <li><a href="Acclaim36.jpg">Disney's Action Club</a> 1997
-<li><a href="Acclaim37.jpg">Disney's Beauty and the Beast Holiday Special</a> 1997
+<li><a href="Acclaim37.jpg">Disney's Beauty and the Beast: Holiday Special</a> 1997
 <li><a href="Acclaim38.jpg">Disney's Enchanting Stories</a> 1997
-<li><a href="Acclaim39.jpg">Disney's The Little Mermaid "Underwater Engagements"</a> 1997
+<li><a href="Acclaim39.jpg">Disney's The Little Mermaid: Underwater Engagements</a> 1997
 <li><a href="Acclaim40.jpg">Dr. Tomorrow</a> 1997
 <li><a href="Acclaim41.jpg">Eternal Warrior</a> 1992
-<li><a href="Acclaim42.jpg">Eternal Warrior Special</a> 1996
-<li><a href="Acclaim43.jpg">Eternal Warrior Yearbook</a> 1993
 <li><a href="Acclaim44.jpg">Eternal Warrior: Fist and Steel</a>	1996
+<li><a href="Acclaim42.jpg">Eternal Warrior: Special</a> 1996
+<li><a href="Acclaim43.jpg">Eternal Warrior: Yearbook</a> 1993
 <li><a href="Acclaim45.jpg">Eternal Warriors: Archer & Armstrong</a> 1997
 <li><a href="Acclaim46.jpg">Eternal Warriors: Blackworks</a> 1998
 <li><a href="Acclaim47.jpg">Eternal Warriors: Digital Alchemy</a> 1997
@@ -273,12 +273,11 @@ Titles
 <li><a href="Acclaim71.jpg">Legend of Jedit Ojanen: On the World of Magic: The Gathering</a> 1996
 <li><a href="Acclaim72.jpg">Legend of the Fallen Angel on the World of Magic: The Gathering</a>	1996
 <li><a href="Acclaim73.jpg">Legend of Zelda</a>	1991
-<li><a href="Acclaim74.jpg">Magic the Gathering: Wayfarer</a>  	1995
-<li><a href="Acclaim75.jpg">Magic: The Gathering: Nightmare</a>  	1995
-<li><a href="Acclaim76.jpg">Magic: the Gathering: The Shadow Mage</a> 1995
-<li><a href="Acclaim77.jpg">Magic: The Gathering: Elder Dragons</a>  	1996
-<li><a href="Acclaim78.jpg">Magic: The Gathering: Shandalar</a>  	1996
-<li><a href="Acclaim79.jpg">Magic: The Gathering: The Shadow Mage</a> 1995
+<li><a href="Acclaim77.jpg">Magic The Gathering: Elder Dragons</a>  1996
+<li><a href="Acclaim75.jpg">Magic The Gathering: Nightmare</a>  	1995
+<li><a href="Acclaim76.jpg">Magic The Gathering: The Shadow Mage</a> 1995
+<li><a href="Acclaim79.jpg">Magic The Gathering: The Shadow Mage</a> 1995
+<li><a href="Acclaim74.jpg">Magic The Gathering: Wayfarer</a>  	1995
 <li><a href="Acclaim80.jpg">Magnus Robot Fighter</a>  	1991
 <li><a href="Acclaim81.jpg">Magnus Robot Fighter</a>  	1997
 <li><a href="Acclaim82.jpg">Magnus Robot Fighter Invasion TPB</a> 1994
@@ -300,10 +299,10 @@ Titles
 <li><a href="Acclaim98.jpg">Psi-Lords</a>  	1994
 <li><a href="Acclaim99.jpg">Punx</a> 1995
 <li><a href="Acclaim100.jpg">Punx Manga Special</a>  	1996
-<li><a href="Acclaim101.jpg">PQuantum & Woody</a> 1997
-<li><a href="Acclaim102.jpg">PQuantum & Woody KYAG (Kiss Your Ass Goodbye)</a> 1998
-<li><a href="Acclaim103.jpg">PQuantum and Woody: Holy S-Word We're Cancelled</a> 1998
-<li><a href="Acclaim104.jpg">PQuantum and Woody: Magnum Force</a> 1999
+<li><a href="Acclaim101.jpg">Quantum And Woody</a> 1997
+<li><a href="Acclaim103.jpg">Quantum and Woody: Holy S-Word We're Cancelled</a> 1998
+<li><a href="Acclaim102.jpg">Quantum And Woody: KYAG (Kiss Your Ass Goodbye)</a> 1998
+<li><a href="Acclaim104.jpg">Quantum and Woody: Magnum Force</a> 1999
 <li><a href="Acclaim105.jpg">Quantum and Woody: The Director's Cut</a>	1997
 <li><a href="Acclaim106.jpg">Rai</a> 1992
 <li><a href="Acclaim107.jpg">Rai and the Future Force</a> 1993
@@ -311,7 +310,7 @@ Titles
 <li><a href="Acclaim109.jpg">Saban Powerhouse</a> 1997
 <li><a href="Acclaim110.jpg">Saban Presents Power Rangers Turbo vs. BeetleBorgs Metallix</a> 	1997
 <li><a href="Acclaim111.jpg">Samuree</a>  	1995
-<li><a href="Acclaim112.jpg">The Second Life of Doctor Mirage</a>  	1993
+<li><a href="Acclaim112.jpg">Second Life of Doctor Mirage</a>  	1993
 <li><a href="Acclaim113.jpg">Secret Weapons</a>  	1993
 <li><a href="Acclaim114.jpg">Secrets of the Valiant Universe</a>  	1994
 <li><a href="Acclaim115.jpg">Serra Angel on the World of Magic the Gathering</a> 	1995
@@ -335,31 +334,31 @@ Titles
 <li><a href="Acclaim133.jpg">Trinity Angels</a> 1997
 <li><a href="Acclaim134.jpg">Troublemakers</a> 1997
 <li><a href="Acclaim135.jpg">Turok</a> 1998
-<li><a href="Acclaim136.jpg">Turok / Shadowman</a>  1999
 <li><a href="Acclaim137.jpg">Turok 2: Seeds of Evil Comic Book Magazine</a> 1998
 <li><a href="Acclaim138.jpg">Turok 3: Shadow of Oblivion</a> 2000
-<li><a href="Acclaim139.jpg">Turok Child of Blood</a> 1998
-<li><a href="Acclaim140.jpg">Turok Evolution</a>  2002
-<li><a href="Acclaim141.jpg">Turok Redpath</a> 1997
-<li><a href="Acclaim142.jpg">Turok Spring Break in the Lost Land</a> 1997
-<li><a href="Acclaim143.jpg">Turok Tales of the Lost Land</a>  	1998
-<li><a href="Acclaim144.jpg">Turok the Hunted</a>  	1996
-<li><a href="Acclaim145.jpg">Turok Yearbook</a>  	1994
-<li><a href="Acclaim146.jpg">Turok, Dinosaur Hunter</a> 1993
-<li><a href="Acclaim147.jpg">Turok, Timewalker: Seventh Sabbath</a> 1997
 <li><a href="Acclaim148.jpg">Turok: Adon's Curse Official Comic Book Magazine</a> 1998
+<li><a href="Acclaim139.jpg">Turok: Child of Blood</a> 1998
+<li><a href="Acclaim146.jpg">Turok: Dinosaur Hunter</a> 1993
+<li><a href="Acclaim140.jpg">Turok: Evolution</a>  2002
+<li><a href="Acclaim141.jpg">Turok: Redpath</a> 1997
+<li><a href="Acclaim136.jpg">Turok: Shadowman</a>  1999
+<li><a href="Acclaim142.jpg">Turok: Spring Break in the Lost Land</a> 1997
+<li><a href="Acclaim143.jpg">Turok: Tales of the Lost Land</a>  	1998
+<li><a href="Acclaim144.jpg">Turok: The Hunted</a>  	1996
+<li><a href="Acclaim147.jpg">Turok: Timewalker Seventh Sabbath</a> 1997
 <li><a href="Acclaim149.jpg">Turok: The Empty Souls</a>	1997
+<li><a href="Acclaim145.jpg">Turok: Yearbook</a>  	1994
 <li><a href="Acclaim150.jpg">Unity</a> 1992
 <li><a href="Acclaim151.jpg">Unity 2000</a>	1999
 <li><a href="Acclaim152.jpg">Unity Saga</a> 1994
 <li><a href="Acclaim153.jpg">Unity Yearbook</a> 1994
 <li><a href="Acclaim154.jpg">Urza-Mishra War on the World of Magic: The Gathering</a>  	1996
 <li><a href="Acclaim155.jpg">Valeria the She-Bat</a>  	1995
-<li><a href="Acclaim156.jpg">The Valiant Era Collection</a>  1994
-<li><a href="Acclaim157.jpg">The Valiant Era Companion</a>	1994
+<li><a href="Acclaim156.jpg">Valiant Era Collection</a>  1994
+<li><a href="Acclaim157.jpg">Valiant Era Companion</a>	1994
 <li><a href="Acclaim158.jpg">Valiant Vision Starter Kit</a>  1993
 <li><a href="Acclaim159.jpg">Vintage Magnus Robot Fighter</a>  1992
-<li><a href="Acclaim160.jpg">The Visitor</a>  1995
+<li><a href="Acclaim160.jpg">Visitor</a>  1995
 <li><a href="Acclaim161.jpg">Visitor vs. the Valiant Universe</a> 1995
 <li><a href="Acclaim162.jpg">Waterworld: Children of the Leviathan</a>  	1997
 <li><a href="Acclaim163.jpg">World Wrestling Federation Lifestyles of the Brutal And Infamous</a> 1991
