--- a/Dell/Dell.html
+++ b/Dell/Dell.html
@@ -651,7 +651,7 @@ Titles
 <li><a href="Dell297.jpg">Twilight Zone</a> (1962)
 <li><a href="Dell298.jpg">Twist</a> (1962)
 <li><a href="Dell299.jpg">Two On A Guillotine</a> (1965)
-<li><a href="Dell58.jpg">Turok, Son of Stone</a> (1956)
+<li><a href="Dell58.jpg">Turok: Son of Stone</a> (1956)
 <li><a href="Dell300.jpg">Uncle Scrooge Goes To Disneyland</a> (1957)
 <li><a href="Dell301.jpg">USA Is Ready</a> (1941)
 <li><a href="Dell302.jpg">Valley Of Gwangi</a> (1969)
