--- a/GoldKey/GoldKey.html
+++ b/GoldKey/GoldKey.html
@@ -305,7 +305,7 @@ Titles
 <li><a href="GoldKey125.jpg">Tom and Jerry</a> (1962)
 <li><a href="GoldKey126.jpg">Top Cat</a> (1962)
 <li><a href="GoldKey127.jpg">Tragg and the Sky Gods</a> (1975)
-<li><a href="GoldKey128.jpg">Turok, Son of Stone</a> (1962)
+<li><a href="GoldKey128.jpg">Turok: Son of Stone</a> (1962)
 <li><a href="GoldKey129.jpg">Tweety and Sylvester</a> (1963)
 <li><a href="GoldKey130.jpg">Twilight Zone</a> (1962)
 <li><a href="GoldKey131.jpg">UFO &amp; Outer Space</a> (1978)
