--- a/WallyWood/WallyWood.html
+++ b/WallyWood/WallyWood.html
@@ -36,6 +36,7 @@
 <div class="mySlides" style="text-align: center;"><img src="WallyWood14.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="WallyWood15.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="WallyWood16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WallyWood17.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
