--- a/MirageStudios/MirageStudios.html
+++ b/MirageStudios/MirageStudios.html
@@ -36,10 +36,10 @@
 <div class="mySlides" style="text-align: center;"><img src="MirageStudios17.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="MirageStudios18.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="MirageStudios19.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="MirageStudios20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../UsagiYojimbo/UsagiYojimboMirage2.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="MirageStudios21.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="MirageStudios22.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="MirageStudios23.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../UsagiYojimbo/UsagiYojimboMirage1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="MirageStudios24.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -70,11 +70,11 @@ Titles
 <li><a href="MirageStudios17.jpg">Rockola</a> (1987)
 <li><a href="MirageStudios18.jpg">Savage Dragon / Teenage Mutant Ninja Turtles</a> (1993)
 <li><a href="MirageStudios19.jpg">Shell Shock</a> (1989)
-<li><a href="MirageStudios20.jpg">Space Usagi</a> (1992)
+<li><a href="../UsagiYojimbo/UsagiYojimbo.html">Space Usagi</a> (1992)
 <li><a href="MirageStudios21.jpg">Stupid Heros</a> (1994)
 <li><a href="../TMNT/TMNT.html">Teenage Mutant Ninja Turtles</a> (1984)
 <li><a href="MirageStudios22.jpg">Turtle Soup</a> (1987)
-<li><a href="MirageStudios23.jpg">Usagi Yojimbo</a> (1993)
+<li><a href="../UsagiYojimbo/UsagiYojimbo.html">Usagi Yojimbo</a> (1993)
 <li><a href="MirageStudios24.jpg">Xenotech</a> (1994)
 </p>
 
