--- a/RandomHouse/RandomHouse.html
+++ b/RandomHouse/RandomHouse.html
@@ -53,7 +53,7 @@
 <div class="mySlides" style="text-align: center;"><img src="Random33.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Random34.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Random35.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Random36.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../Epileptic/Epileptic.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Random37.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Random38.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Random39.jpg"></div>
@@ -122,7 +122,7 @@
 <div class="mySlides" style="text-align: center;"><img src="Random102.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Random103.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Random104.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Random105.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../Seconds/Seconds1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Random106.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Random107.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Random108.jpg"></div>
@@ -208,7 +208,7 @@ Titles
 <li><a href="Random33.jpg">Dresden Files: Storm Front: The Gathering Storm  </a>(2009)
 <li><a href="Random34.jpg">Dresden Files: Welcome to the Jungle  </a>(2008)
 <li><a href="Random35.jpg">End of the World  </a>(2019)
-<li><a href="Random36.jpg">Epileptic  </a>(2006)
+<li><a href="../Epileptic/Epileptic.html">Epileptic  </a>(2006)
 <li><a href="Random37.jpg">ES: Eternal Sabbath  </a>(2006)
 <li><a href="Random38.jpg">Even White Boys Get the Blues </a>(1992)
 <li><a href="Random39.jpg">Fagin the Jew  </a>(2003)
@@ -231,7 +231,7 @@ Titles
 <li><a href="Random56.jpg">Hilo and His Friends Get Graphic  </a>(2018)
 <li><a href="Random57.jpg">Hold Me!  </a>(1962)
 <li><a href="Random58.jpg">Huntington, West Virginia "On the Fly" </a>(2011)
-<li><a href="Random59.jpg">The Incredibles: Return of the Supers!  </a>(2004)
+<li><a href="Random59.jpg">Incredibles: Return of the Supers!  </a>(2004)
 <li><a href="Random60.jpg">It Goes Without Saying  </a>(2005)
 <li><a href="Random61.jpg">It's a Big World, Charlie Brown  </a>(2001)
 <li><a href="Random62.jpg">It's a Dog's Life, Snoopy  </a>(2001)
@@ -277,8 +277,8 @@ Titles
 <li><a href="Random102.jpg">Right to Be Hostile </a> (2003)
 <li><a href="Random103.jpg">School Rumble  </a> (2006)
 <li><a href="Random104.jpg">Season's Eatings: A Very Merry Garfield Christmas  </a>(2003)
-<li><a href="Random105.jpg">Seconds  </a>(2014)
-<li><a href="Random106.jpg">Sequential Drawings: The New Yorker Series  </a>(2016)
+<li><a href="../Seconds/Seconds.html">Seconds</a> (2014)
+<li><a href="Random106.jpg">Sequential Drawings: The New Yorker Series</a> (2016)
 <li><a href="Random107.jpg">Seventh New Yorker Album  </a>(1935)
 <li><a href="Random108.jpg">Shutterbug Follies  </a>(2002)
 <li><a href="Random109.jpg">Smurfs and the Howlibird </a>(1977)
