--- a/UsagiYojimbo/UsagiYojimbo.html
+++ b/UsagiYojimbo/UsagiYojimbo.html
@@ -30,18 +30,26 @@
 <div class="mySlides" style="text-align: center;"><img src="UsagiYojimboDH1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="UsagiYojimboIDW1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="UsagiYojimboIDW2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="UsagiYojimboMirage2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="UsagiYojimboMirage3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="UsagiYojimboMirage4.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-38 issues 1987-1993 Fantagraphics, 16 issues 1993-1995 Mirage, 165 issues 1996-2017 Dark Horse, 8 issues 2019-2020 IDW.
+38 issues 1987-1993 Fantagraphics, 16 issues 1993-1995 Mirage, 165 issues 1996-2017 Dark Horse, 8 issues 2019-2020 IDW. Usagi first appeared in the anthology <a href="../ThoughtsAndImages/ThoughtsAndImages.html">Albedo Anthropomorphics</a> in 1984, and later in the Fantagraphics Books anthropomorphic anthology Critters, before appearing in his own series in 1987.
 </p><p>
 Usagi Yojimbo ("rabbit bodyguard") is a comic book series created by <a href="../StanSakai/StanSakai.html">Stan Sakai</a>. It is set primarily at the beginning of the Edo period of Japanese history and features anthropomorphic animals replacing humans. The main character is a rabbit rōnin, Miyamoto Usagi, whom Sakai based partially on the famous swordsman Miyamoto Musashi. Usagi wanders the land on a musha shugyō (warrior's pilgrimage), occasionally selling his services as a bodyguard.
 </p><p>
 Usagi Yojimbo is heavily influenced by Japanese cinema and has included references to the work of Akira Kurosawa (the title of the series is derived from Kurosawa's 1960 film Yojimbo) and to icons of popular Japanese cinema such as Lone Wolf and Cub, Zatoichi, and Godzilla. 
 </p><p>
 The series is also influenced somewhat by Groo the Wanderer by Sergio Aragonés (Sakai is the letterer for that series), but the overall tone of Usagi Yojimbo is more serious and reflective. The series follows the standard traditional Japanese naming-convention for all featured characters: their family names followed by their given names.
+</p><p>
+Off shoot titles
+</p><p> 
+<li><a href="UsagiYojimboMirage2.jpg">Space Usagi</a> (1992)
 </p>
+
 </body>
 </html>
