--- a/DeadWorld/DeadWorld.html
+++ b/DeadWorld/DeadWorld.html
@@ -38,6 +38,36 @@
 <div class="mySlides" style="text-align: center;"><img src="DeadWorld18.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="DeadWorld19.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="DeadWorld20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DeadWorld21.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DeadWorld22.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DeadWorld23.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DeadWorld24.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DeadWorld25.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DeadWorld26.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DeadWorld27.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DeadWorld28.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DeadWorld29.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DeadWorld30.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DeadWorld31.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DeadWorld32.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DeadWorld33.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DeadWorld34.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DeadWorld35.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DeadWorld36.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DeadWorld37.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DeadWorld38.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DeadWorld39.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DeadWorld40.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DeadWorld41.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DeadWorld42.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DeadWorld43.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DeadWorld44.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DeadWorld45.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DeadWorld46.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DeadWorld47.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DeadWorld48.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DeadWorld49.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DeadWorld50.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
