--- a/index.html
+++ b/index.html
@@ -177,6 +177,13 @@
 </tr>
 
 <tr>
+<td>3-D Comics</td>
+<td>1953</td>
+<td>St. John</td>
+<td><a href="StJohnPublications/StJohnPublications.html">Details</a></td>
+</tr>
+
+<tr>
 <td>3-D Dolly</td>
 <td>1953</td>
 <td>Harvey</td>
@@ -1845,6 +1852,13 @@
 </tr>
 
 <tr>
+<td>Abbie An' Slats</td>
+<td>1948</td>
+<td>St. John</td>
+<td><a href="StJohnPublications/StJohnPublications.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Abbott And Costello</td>
 <td>1935</td>
 <td>Creator</td>
@@ -1856,6 +1870,20 @@
 <td>1968</td>
 <td>Charlton</td>
 <td><a href="Charlton/Charlton.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Abbott And Costello 3-D</td>
+<td>1953</td>
+<td>St. John</td>
+<td><a href="StJohnPublications/StJohnPublications.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Abbott And Costello Comics</td>
+<td>1948</td>
+<td>St. John</td>
+<td><a href="StJohnPublications/StJohnPublications.html">Details</a></td>
 </tr>
 
 <tr>
@@ -2867,6 +2895,13 @@
 </tr>
 
 <tr>
+<td>Adventures In Romance</td>
+<td>1949</td>
+<td>St. John</td>
+<td><a href="StJohnPublications/StJohnPublications.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Adventures In The Mystwood</td>
 <td>1986</td>
 <td>Blackthorne</td>
@@ -3157,6 +3192,13 @@
 <td>1978</td>
 <td>Dark Horse</td>
 <td><a href="AdventuresLutherArkwright/AdventuresLutherArkwright.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Adventures Of Might Mouse</td>
+<td>1952</td>
+<td>St. John</td>
+<td><a href="StJohnPublications/StJohnPublications.html">Details</a></td>
 </tr>
 
 <tr>
@@ -5236,6 +5278,13 @@
 </tr>
 
 <tr>
+<td>All Good</td>
+<td>1949</td>
+<td>St. John</td>
+<td><a href="StJohnPublications/StJohnPublications.html">Details</a></td>
+</tr>
+
+<tr>
 <td>All Great</td>
 <td>1944</td>
 <td>Fox Comics</td>
@@ -5397,6 +5446,27 @@
 </tr>
 
 <tr>
+<td>All Good</td>
+<td>1949</td>
+<td>St. John</td>
+<td><a href="StJohnPublications/StJohnPublications.html">Details</a></td>
+</tr>
+
+<tr>
+<td>All Picture Adventure</td>
+<td>1952</td>
+<td>St. John</td>
+<td><a href="StJohnPublications/StJohnPublications.html">Details</a></td>
+</tr>
+
+<tr>
+<td>All Picture All True Love Story</td>
+<td>1952</td>
+<td>St. John</td>
+<td><a href="StJohnPublications/StJohnPublications.html">Details</a></td>
+</tr>
+
+<tr>
 <td>All Real Confession Magazine</td>
 <td>1949</td>
 <td>Fox Comics</td>
@@ -5492,6 +5562,13 @@
 <td>1995</td>
 <td>Rip Off</td>
 <td><a href="RipOffPress/RipOffPress.html">Details</a>
+</tr>
+
+<tr>
+<td>All True All Picture Police Cases</td>
+<td>1952</td>
+<td>St. John</td>
+<td><a href="StJohnPublications/StJohnPublications.html">Details</a></td>
 </tr>
 
 <tr>
@@ -5625,6 +5702,13 @@
 <td>2002</td>
 <td>Viz</td>
 <td><a href="Viz/Viz.html">Details</a></td>
+</tr>
+
+<tr>
+<td>All-Picture Comedy Carnival</td>
+<td>1952</td>
+<td>St. John</td>
+<td><a href="StJohnPublications/StJohnPublications.html">Details</a></td>
 </tr>
 
 <tr>
@@ -6080,6 +6164,13 @@
 <td>1961</td>
 <td>Marvel</td>
 <td><a href="AmazingFantasy/AmazingFantasy.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Amazing Ghost Stories</td>
+<td>1954</td>
+<td>St. John</td>
+<td><a href="StJohnPublications/StJohnPublications.html">Details</a></td>
 </tr>
 
 <tr>
@@ -6878,6 +6969,20 @@
 <td>1998</td>
 <td>Brainstorm</td>
 <td><a href="Brainstorm/Brainstorm.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Anchors Andrews</td>
+<td>1953</td>
+<td>St. John</td>
+<td><a href="StJohnPublications/StJohnPublications.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Anchors The Salt Water Daffy</td>
+<td>1953</td>
+<td>St. John</td>
+<td><a href="StJohnPublications/StJohnPublications.html">Details</a></td>
 </tr>
 
 <tr>
@@ -7858,6 +7963,13 @@
 <td>2015</td>
 <td>Dark Horse</td>
 <td><a href="ApocalyptiGirl/ApocalyptiGirl.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Approved Comics</td>
+<td>1953</td>
+<td>St. John</td>
+<td><a href="StJohnPublications/StJohnPublications.html">Details</a></td>
 </tr>
 
 <tr>
@@ -9678,6 +9790,13 @@
 </tr>
 
 <tr>
+<td>Atom-Age Combat</td>
+<td>1952</td>
+<td>St. John</td>
+<td><a href="StJohnPublications/StJohnPublications.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Atomahawk</td>
 <td>2017</td>
 <td>Image</td>
@@ -9990,6 +10109,13 @@
 <td>2014</td>
 <td>Oni</td>
 <td><a href="OniPress/OniPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Authentic Police Cases</td>
+<td>1948</td>
+<td>St. John</td>
+<td><a href="StJohnPublications/StJohnPublications.html">Details</a></td>
 </tr>
 
 <tr>
@@ -11753,6 +11879,13 @@
 <td>1993</td>
 <td>Publisher</td>
 <td><a href="BasementComics/BasementComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Basil The Royal Cat</td>
+<td>1953</td>
+<td>St. John</td>
+<td><a href="StJohnPublications/StJohnPublications.html">Details</a></td>
 </tr>
 
 <tr>
@@ -14623,6 +14756,20 @@
 </tr>
 
 <tr>
+<td>Bingo</td>
+<td>1951</td>
+<td>St. John</td>
+<td><a href="StJohnPublications/StJohnPublications.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Bingo The Monkey Doodle Boy</td>
+<td>1953</td>
+<td>St. John</td>
+<td><a href="StJohnPublications/StJohnPublications.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Binky Brown Meets The Holy Virgin Mary</td>
 <td>1972</td>
 <td>Last Gasp</td>
@@ -16678,6 +16825,13 @@
 <td>1939</td>
 <td>Archie</td>
 <td><a href="BlueRibbon/BlueRibbon.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Blue Ribbon Comics</td>
+<td>1949</td>
+<td>St. John</td>
+<td><a href="StJohnPublications/StJohnPublications.html">Details</a></td>
 </tr>
 
 <tr>
@@ -19858,6 +20012,13 @@
 </tr>
 
 <tr>
+<td>Canteen Kate</td>
+<td>1952</td>
+<td>St. John</td>
+<td><a href="StJohnPublications/StJohnPublications.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Canto</td>
 <td>2019</td>
 <td>IDW</td>
@@ -21041,6 +21202,13 @@
 </tr>
 
 <tr>
+<td>Case Of The Winking Buddha</td>
+<td>1950</td>
+<td>St. John</td>
+<td><a href="StJohnPublications/StJohnPublications.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Cases Of Sherlock Holmes</td>
 <td>1986</td>
 <td>Renegade</td>
@@ -21234,6 +21402,13 @@
 <td>1939</td>
 <td>Paramount</td>
 <td><a href="Casper/Casper.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Casper The Fridendly Ghost</td>
+<td>1949</td>
+<td>St. John</td>
+<td><a href="StJohnPublications/StJohnPublications.html">Details</a></td>
 </tr>
 
 <tr>
@@ -22958,6 +23133,13 @@
 </tr>
 
 <tr>
+<td>Christmas Carnival</td>
+<td>1955</td>
+<td>St. John</td>
+<td><a href="StJohnPublications/StJohnPublications.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Christmas Carol's Welcome To Hudson's Toyland Fun Book</td>
 <td>1958</td>
 <td>Western</td>
@@ -23115,6 +23297,13 @@
 <td>1955</td>
 <td>Western</td>
 <td><a href="Western/Western.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Cinderella Love</td>
+<td>1953</td>
+<td>St. John</td>
+<td><a href="StJohnPublications/StJohnPublications.html">Details</a></td>
 </tr>
 
 <tr>
@@ -24687,6 +24876,13 @@
 <td>1936</td>
 <td>Publisher</td>
 <td><a href="ComicsMagazineCompany/ComicsMagazineCompany.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Comics Review</td>
+<td>1947</td>
+<td>St. John</td>
+<td><a href="StJohnPublications/StJohnPublications.html">Details</a></td>
 </tr>
 
 <tr>
@@ -26271,10 +26467,10 @@
 </tr>
 
 <tr>
-<td>Crime-Smasher</td>
-<td>1987</td>
-<td>Blue Comet</td>
-<td><a href="BlueCometPress/BlueCometPress.html">Details</a></td>
+<td>Crime Reporter</td>
+<td>1948</td>
+<td>St. John</td>
+<td><a href="StJohnPublications/StJohnPublications.html">Details</a></td>
 </tr>
 
 <tr>
@@ -26282,6 +26478,13 @@
 <td>1950</td>
 <td>EC</td>
 <td><a href="CrimeSuspenStories/CrimeSuspenStories.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Crime-Smasher</td>
+<td>1987</td>
+<td>Blue Comet</td>
+<td><a href="BlueCometPress/BlueCometPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -28081,6 +28284,13 @@
 <td>1968</td>
 <td>Creator</td>
 <td><a href="DarickRobertson/DarickRobertson.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Daring Adventures 3D</td>
+<td>1950</td>
+<td>St. John</td>
+<td><a href="StJohnPublications/StJohnPublications.html">Details</a></td>
 </tr>
 
 <tr>
@@ -31036,6 +31246,13 @@
 </tr>
 
 <tr>
+<td>Diary Secrets</td>
+<td>1950</td>
+<td>St. John</td>
+<td><a href="StJohnPublications/StJohnPublications.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Dick Ayers</td>
 <td>1924</td>
 <td>Creator</td>
@@ -31369,6 +31586,13 @@
 <td>1870</td>
 <td>Creator</td>
 <td><a href="DinkShannon/DinkShannon.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dinky Duck</td>
+<td>1951</td>
+<td>St. John</td>
+<td><a href="StJohnPublications/StJohnPublications.html">Details</a></td>
 </tr>
 
 <tr>
@@ -31943,6 +32167,13 @@
 <td>2010</td>
 <td>Boom!</td>
 <td><a href="Boom!/Boom!.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Do You Belive In Nightmares</td>
+<td>1957</td>
+<td>St. John</td>
+<td><a href="StJohnPublications/StJohnPublications.html">Details</a></td>
 </tr>
 
 <tr>
@@ -33042,6 +33273,13 @@
 <td>1959</td>
 <td>Archie</td>
 <td><a href="ArchieComics/ArchieComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Double Trouble</td>
+<td>1957</td>
+<td>St. John</td>
+<td><a href="StJohnPublications/StJohnPublications.html">Details</a></td>
 </tr>
 
 <tr>
@@ -35392,6 +35630,13 @@
 <td>1934</td>
 <td>Western</td>
 <td><a href="Western/Western.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Ella Cinders</td>
+<td>1948</td>
+<td>St. John</td>
+<td><a href="StJohnPublications/StJohnPublications.html">Details</a></td>
 </tr>
 
 <tr>
