--- a/Humanoids/Humanoids.html
+++ b/Humanoids/Humanoids.html
@@ -209,7 +209,7 @@ Titles
 <li><a href="Humanoids68.jpg">Milan K.</a> (2017)
 <li><a href="Humanoids69.jpg">Milan K. Part One: The Teenage Years</a> (2013)
 <li><a href="Humanoids70.jpg">Milo Manara's The Golden Ass</a> (2016)
-<li><a href="Humanoids71.jpg">Miss: Better Living through Crime</a> (2015)
+<li><a href="Humanoids71.jpg">Miss: Better Living Through Crime</a> (2015)
 <li><a href="Humanoids72.jpg">Monsieur Jean: From Bachelor to Father</a> (2014)
 <li><a href="Humanoids73.jpg">Moon Face</a> (2018)
 <li><a href="Humanoids74.jpg">Morgana</a> (2002)
