--- a/StJohnPublications/StJohnPublications.html
+++ b/StJohnPublications/StJohnPublications.html
@@ -89,7 +89,7 @@
 <div class="mySlides" style="text-align: center;"><img src="StJohn69.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="StJohn70.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="StJohn71.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="StJohn72.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../Nightmare/Nightmare3.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="StJohn73.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="StJohn74.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="StJohn75.jpg"></div>
@@ -206,7 +206,7 @@ Titles
 <li><a href="StJohn69.jpg">Midget Comics</a> (1950)
 <li><a href="StJohn70.jpg">Mighty Mouse</a> (1947)
 <li><a href="StJohn71.jpg">Moon Mullins</a> (1949)
-<li><a href="StJohn72.jpg">Nightmare</a> (1954)
+<li><a href="../Nightmare/Nightmare.html">Nightmare</a> (1954)
 <li><a href="StJohn73.jpg">Northwest Mounties</a> (1948)
 <li><a href="StJohn74.jpg">One Million Years Ago</a> (1953)
 <li><a href="StJohn75.jpg">Pageant Of Comics</a> (1947)
