--- a/index.html
+++ b/index.html
@@ -31848,6 +31848,13 @@
 </tr>
 
 <tr>
+<td>Disney Press</td>
+<td>1933</td>
+<td>Publisher</td>
+<td><a href="DisneyPress/DisneyPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Disney Princess</td>
 <td>2005</td>
 <td>Disney</td>
@@ -54156,6 +54163,13 @@
 <td>1913</td>
 <td>Creator</td>
 <td><a href="JoeSimon/JoeSimon.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Joe Sinnott</td>
+<td>1926</td>
+<td>Creator</td>
+<td><a href="JoeSinnott/JoeSinnott.html">Details</a></td>
 </tr>
 
 <tr>
